--- a/web/modules/custom/empty_module/trainee_empty_module.info.yml
+++ b/web/modules/custom/empty_module/trainee_empty_module.info.yml
@@ -1,6 +1,6 @@
-name: Empty Module
+name: Trainee Empty Module
 description: Empty module
 type: module
 core: 8.x
 core_version_requirement:  ^8 || ^9
-package: Empty module
+package: Trainee custom modules
