cleaned up code and added service interface

--- a/web/modules/custom/trainee_user/trainee_user.routing.yml
+++ b/web/modules/custom/trainee_user/trainee_user.routing.yml
@@ -2,6 +2,6 @@ trainee_user.users:
   path: 'users'
   defaults:
     _controller: 'Drupal\trainee_user\Controller\UserController::users'
-    _title: 'User form!'
+    _title: 'Trainee User form'
   requirements:
     _permission: 'access content'
