--- a/web/modules/custom/trainee_user/trainee_user.info.yml
+++ b/web/modules/custom/trainee_user/trainee_user.info.yml
@@ -1,6 +1,6 @@
-name: User Module
+name: Trainee User Module
 description: User module
 type: module
 core: 8.x
 core_version_requirement:  ^8 || ^9
-package: User module
+package: Trainee custom modules
