--- a/web/modules/custom/trainee_user/trainee_user.services.yml
+++ b/web/modules/custom/trainee_user/trainee_user.services.yml
@@ -1,4 +1,4 @@
 services:
-  trainee_user.user_manager:
-    class: Drupal\trainee_user\UserManager
+  trainee_user.user_manager_service:
+    class: Drupal\trainee_user\UserManagerService
     arguments: ['@current_user']
