added update and delete form

--- a/web/modules/custom/trainee_user/trainee_user.routing.yml
+++ b/web/modules/custom/trainee_user/trainee_user.routing.yml
@@ -1,8 +1,8 @@
-trainee_user.users:
-  path: 'users'
+trainee_user.user_list:
+  path: 'users-page/{page}'
   defaults:
-    _controller: 'Drupal\trainee_user\Controller\UserController::users'
-    _title: 'Trainee User form'
+    _controller: 'Drupal\trainee_user\Controller\UserController::showUserList'
+    _title: 'List of Users'
   requirements:
     _permission: 'access content'
 
@@ -13,3 +13,12 @@ trainee_user.management_form:
     _title: 'Trainee user form'
   requirements:
     _permission: 'access content'
+
+trainee_user.delete_form:
+  path: 'delete/{id}'
+  defaults:
+    _form: 'Drupal\trainee_user\Form\UserDeleteForm'
+    _title: 'Trainee user form'
+  requirements:
+    _permission: 'access content'
+
