moved the API parameters to the configuration form and created a possibility to save them

--- a/web/modules/custom/trainee_user/trainee_user.routing.yml
+++ b/web/modules/custom/trainee_user/trainee_user.routing.yml
@@ -1,3 +1,11 @@
+trainee_user.api_config_page:
+  path: '/admin/config/users-api'
+  defaults:
+    _form: 'Drupal\trainee_user\Form\UserApiConfigForm'
+    _title: 'User API Settings'
+  requirements:
+    _permission: 'administer site configuration'
+
 trainee_user.user_list:
   path: 'users-page/{page}'
   defaults:
