--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.1",
         "drupal/config_filter": "^2.4",
+        "drupal/config_inspector": "^2.1",
         "drupal/config_split": "^2.0@RC",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
