--- a/config/sync/block.block.olivero_help.yml
+++ b/config/sync/block.block.olivero_help.yml
@@ -1,6 +1,6 @@
 uuid: 57d4281f-28b4-4a27-acec-02995ff9d451
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - help
@@ -11,7 +11,7 @@ _core:
 id: olivero_help
 theme: olivero
 region: content_above
-weight: 0
+weight: -6
 provider: null
 plugin: help_block
 settings:
