--- a/config/sync/block.block.olivero_page_title.yml
+++ b/config/sync/block.block.olivero_page_title.yml
@@ -1,6 +1,6 @@
 uuid: 0012f094-674f-48d6-9f2d-0dd6007941bf
 langcode: en
-status: true
+status: false
 dependencies:
   theme:
     - olivero
@@ -9,7 +9,7 @@ _core:
 id: olivero_page_title
 theme: olivero
 region: content_above
-weight: -5
+weight: -7
 provider: null
 plugin: page_title_block
 settings:
