--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.1",
+        "drupal/advancedqueue": "^1.0@RC",
         "drupal/business_responsive_theme": "^2.0",
         "drupal/components": "^2.4",
         "drupal/config_filter": "^2.4",
