--- a/web/modules/custom/pokemon/config/install/ultimate_cron.job.create_ability.yml
+++ b/web/modules/custom/pokemon/config/install/ultimate_cron.job.create_ability.yml
@@ -3,11 +3,11 @@ status: true
 dependencies:
   module:
     - pokemon
-title: 'Cron for creating a content from Pokemon API'
-id: pokemon_cron_job_create_pokemons
+title: 'Cron for creating ability taxonomy from Pokemon API'
+id: pokemon_cron_job_create_ability
 weight: 0
 module: pokemon
-callback: pokemon_callback
+callback: pokemon_ability_tax_callback
 scheduler:
   id: simple
 launcher:
