--- a/config/sync/field.field.node.pokemon.field_stat.yml
+++ b/config/sync/field.field.node.pokemon.field_stat.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_stat
     - node.type.pokemon
-    - taxonomy.vocabulary.stats
 id: node.pokemon.field_stat
 field_name: field_stat
 entity_type: node
@@ -19,8 +18,7 @@ default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
-    target_bundles:
-      stats: stats
+    target_bundles: {  }
     sort:
       field: name
       direction: asc
