--- a/config/sync/ultimate_cron.job.pokemon_cron_job_create_ability.yml
+++ b/config/sync/ultimate_cron.job.pokemon_cron_job_create_ability.yml
@@ -1,4 +1,4 @@
-uuid: 138b4877-4b60-41b2-93b7-ebac9e365fb3
+uuid: 85a82881-82e7-4507-8900-9b945dd65ca8
 langcode: en
 status: true
 dependencies:
@@ -13,7 +13,19 @@ module: pokemon
 callback: pokemon_ability_tax_callback
 scheduler:
   id: simple
+  configuration:
+    rules:
+      - '0+@ 0 * * 0'
 launcher:
   id: serial
+  configuration:
+    timeouts:
+      lock_timeout: 3600
+    launcher:
+      thread: 0
 logger:
   id: database
+  configuration:
+    method: '3'
+    expire: 1209600
+    retain: 1000
