--- a/config/sync/ultimate_cron.job.pokemon_cron_job_create_color.yml
+++ b/config/sync/ultimate_cron.job.pokemon_cron_job_create_color.yml
@@ -1,4 +1,4 @@
-uuid: 9a4de53b-943d-4486-b7fe-e18440e857b4
+uuid: 3b07cf77-233b-491f-8f7c-157f19c32fab
 langcode: en
 status: true
 dependencies:
@@ -13,7 +13,19 @@ module: pokemon
 callback: pokemon_color_tax_callback
 scheduler:
   id: simple
+  configuration:
+    rules:
+      - '0+@ 0 * * 0'
 launcher:
   id: serial
+  configuration:
+    timeouts:
+      lock_timeout: 3600
+    launcher:
+      thread: 0
 logger:
   id: database
+  configuration:
+    method: '3'
+    expire: 1209600
+    retain: 1000
