--- a/config/sync/ultimate_cron.job.pokemon_cron_job_create_species.yml
+++ b/config/sync/ultimate_cron.job.pokemon_cron_job_create_species.yml
@@ -1,4 +1,4 @@
-uuid: 13956ce2-1a5c-4b69-9a74-2912a2a97304
+uuid: d507c918-fe58-4ae9-abdb-c22fd4db1337
 langcode: en
 status: true
 dependencies:
@@ -13,7 +13,19 @@ module: pokemon
 callback: pokemon_species_tax_callback
 scheduler:
   id: simple
+  configuration:
+    rules:
+      - '0+@ 0 * * 0'
 launcher:
   id: serial
+  configuration:
+    timeouts:
+      lock_timeout: 3600
+    launcher:
+      thread: 0
 logger:
   id: database
+  configuration:
+    method: '3'
+    expire: 1209600
+    retain: 1000
