--- a/config/sync/ultimate_cron.job.pokemon_cron_job_create_type.yml
+++ b/config/sync/ultimate_cron.job.pokemon_cron_job_create_type.yml
@@ -1,4 +1,4 @@
-uuid: f5574a27-abbf-49a3-aa01-5d2e239647b0
+uuid: d6ae9e04-b8b4-40c7-9474-6346c1b05e43
 langcode: en
 status: true
 dependencies:
@@ -13,7 +13,19 @@ module: pokemon
 callback: pokemon_type_tax_callback
 scheduler:
   id: simple
+  configuration:
+    rules:
+      - '0+@ 0 * * 0'
 launcher:
   id: serial
+  configuration:
+    timeouts:
+      lock_timeout: 3600
+    launcher:
+      thread: 0
 logger:
   id: database
+  configuration:
+    method: '3'
+    expire: 1209600
+    retain: 1000
