--- a/web/modules/custom/pokemon/pokemon.services.yml
+++ b/web/modules/custom/pokemon/pokemon.services.yml
@@ -6,3 +6,8 @@ services:
     class: Drupal\pokemon\EventSubscriber\RouteSubscriber
     tags:
       - { name: event_subscriber }
+  pokemon.commands:
+    class: Drupal\pokemon\Commands\PokemonDrushCommands
+    arguments: [ '@entity_type.manager', '@logger.factory' ]
+    tags:
+      - { name: drush.command }
