created Pokemon Api endpoints

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,14 @@
         "drupal/config_split": "^2.0@RC",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/openapi": "^2.1",
+        "drupal/openapi_rest": "^2.0@RC",
+        "drupal/openapi_ui": "^1.0@RC",
+        "drupal/openapi_ui_redoc": "^1.0@RC",
         "drupal/radix": "^5.0",
+        "drupal/restui": "^1.21",
         "drupal/search_api": "^1.28",
+        "drupal/swagger_ui_formatter": "^3.4",
         "drupal/tvi": "^1.0@RC",
         "drupal/twig_tweak": "^3.2",
         "drupal/ultimate_cron": "^2.0@alpha",
