--- a/config/sync/node.type.page.yml
+++ b/config/sync/node.type.page.yml
@@ -1,7 +1,14 @@
 uuid: 1c45472a-9082-4ef8-9be4-5ca81f2ba70c
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: KuyA4NHPXcmKAjRtwa0vQc2ZcyrUJy6IlS2TAyMNRbc
 name: 'Basic page'
