--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.node.page.field_title
     - node.type.page
   module:
-    - image
     - user
 _core:
   default_config_hash: M_Y8L5tfmhx7DR143E05YyZSpvgil6VFvqcfBWykalg
@@ -17,20 +16,10 @@ id: node.page.default
 targetEntityType: node
 bundle: page
 mode: default
-content:
-  field_example_image:
-    type: image
-    label: above
-    settings:
-      image_link: ''
-      image_style: ''
-      image_loading:
-        attribute: lazy
-    third_party_settings: {  }
-    weight: 0
-    region: content
+content: {  }
 hidden:
   body: true
+  field_example_image: true
   field_external_user: true
   field_title: true
   links: true
