--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -6,6 +6,7 @@ module:
   admin_toolbar_tools: 0
   advancedqueue: 0
   automated_cron: 0
+  basic_auth: 0
   batch_test: 0
   big_pipe: 0
   block: 0
@@ -30,6 +31,7 @@ module:
   help: 0
   history: 0
   image: 0
+  jsonapi: 0
   layout_builder: 0
   layout_discovery: 0
   link: 0
@@ -39,14 +41,20 @@ module:
   minute: 0
   mysql: 0
   node: 0
+  openapi: 0
+  openapi_test: 0
+  openapi_ui: 0
   options: 0
   path: 0
   path_alias: 0
   pokemon: 0
   rdf: 0
+  rest: 0
+  restui: 0
   search_api: 0
   search_api_db: 0
   search_api_db_defaults: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
