--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -24,26 +24,32 @@ module:
   devel: 0
   dynamic_page_cache: 0
   editor: 0
+  fancy_file_delete: 0
   field: 0
   field_ui: 0
   file: 0
+  file_delete: 0
   filter: 0
   help: 0
   history: 0
   image: 0
+  image_style_warmer: 0
   jsonapi: 0
   layout_builder: 0
   layout_discovery: 0
   link: 0
   media: 0
+  media_thumbnails: 0
   menu_link_content: 0
   menu_ui: 0
   minute: 0
   mysql: 0
   node: 0
   openapi: 0
+  openapi_rest: 0
   openapi_test: 0
   openapi_ui: 0
+  openapi_ui_redoc: 0
   options: 0
   path: 0
   path_alias: 0
@@ -51,6 +57,8 @@ module:
   rdf: 0
   rest: 0
   restui: 0
+  schemata: 0
+  schemata_json_schema: 0
   search_api: 0
   search_api_db: 0
   search_api_db_defaults: 0
@@ -66,6 +74,7 @@ module:
   ultimate_cron: 0
   update: 0
   user: 0
+  views_bulk_operations: 0
   views_ui: 0
   views: 10
   standard: 1000
