--- a/config/sync/field.field.media.pokemon_image.field_media_image_1.yml
+++ b/config/sync/field.field.media.pokemon_image.field_media_image_1.yml
@@ -13,7 +13,7 @@ entity_type: media
 bundle: pokemon_image
 label: Image
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
@@ -30,7 +30,7 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
