--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.page.field_title
     - node.type.page
   module:
+    - text
     - user
 _core:
   default_config_hash: M_Y8L5tfmhx7DR143E05YyZSpvgil6VFvqcfBWykalg
@@ -16,11 +17,23 @@ id: node.page.default
 targetEntityType: node
 bundle: page
 mode: default
-content: {  }
+content:
+  body:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_title:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 0
+    region: content
 hidden:
-  body: true
   field_example_image: true
   field_external_user: true
-  field_title: true
   links: true
   search_api_excerpt: true
