added update letters mailing

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/image_style_warmer": "^1.1",
         "drupal/media_entity_remote_image": "^1.0@alpha",
         "drupal/media_thumbnails": "^1.0@beta",
+        "drupal/mimemail": "^1.0@alpha",
         "drupal/openapi": "^2.1",
         "drupal/openapi_rest": "^2.0@RC",
         "drupal/openapi_ui": "^1.0@RC",
@@ -41,7 +42,9 @@
         "drupal/radix": "^5.0",
         "drupal/restui": "^1.21",
         "drupal/search_api": "^1.28",
+        "drupal/smtp": "^1.2",
         "drupal/swagger_ui_formatter": "^3.4",
+        "drupal/swiftmailer": "^2.3",
         "drupal/tvi": "^1.0@RC",
         "drupal/twig_tweak": "^3.2",
         "drupal/ultimate_cron": "^2.0@alpha",
