--- a/web/modules/custom/pokemon/pokemon.services.yml
+++ b/web/modules/custom/pokemon/pokemon.services.yml
@@ -11,3 +11,29 @@ services:
     arguments: [ '@entity_type.manager', '@logger.factory' ]
     tags:
       - { name: drush.command }
+  pokemon.pokemon_update_node_subscriber:
+    class: Drupal\pokemon\EventSubscriber\PokemonUpdateNodeSubscriber
+    arguments: ['@pokemon.entity_update_notification_mail', '@config.factory']
+    tags:
+      - { name: event_subscriber }
+  pokemon.pokemon_update_tax_term_subscriber:
+    class: Drupal\pokemon\EventSubscriber\PokemonUpdateTaxTermSubscriber
+    arguments: [ '@pokemon.entity_update_notification_mail','@config.factory' ]
+    tags:
+      - { name: event_subscriber }
+  pokemon.pokemon_update_media_subscriber:
+    class: Drupal\pokemon\EventSubscriber\PokemonUpdateMediaSubscriber
+    arguments: [ '@pokemon.entity_update_notification_mail', '@config.factory' ]
+    tags:
+      - { name: event_subscriber }
+  pokemon.pokemon_entity_update_media_subscriber:
+    class: Drupal\pokemon\EventSubscriber\PokemonUpdateMediaSubscriber
+    arguments: [ '@pokemon.entity_update_notification_mail', '@config.factory' ]
+    tags:
+      - { name: event_subscriber }
+  pokemon.mail_handler:
+    class: Drupal\pokemon\Mail\MailHandler
+    arguments: [ '@plugin.manager.mail', '@language_manager', '@language.default', '@string_translation' ]
+  pokemon.entity_update_notification_mail:
+    class: Drupal\pokemon\Mail\EntityUpdateNotificationMail
+    arguments: [ '@pokemon.mail_handler', '@request_stack', '@config.factory' ]
