--- a/config/sync/pokemon_mailing_list_form.settings.yml
+++ b/config/sync/pokemon_mailing_list_form.settings.yml
@@ -1,1 +1,1 @@
-mailing_list: 'mail@gmail.com, testu8418@gmail.com, testu8418+1@gmail.com'
+mailing_list: 'testu8418+testuser1@gmail.com, testu8418+testuser2@gmail.com, testu8418+3testuser@gmail.com'
