--- a/config/sync/mimemail.settings.yml
+++ b/config/sync/mimemail.settings.yml
@@ -1,7 +1,7 @@
 _core:
   default_config_hash: rpfRQVoEn2ZWd_lw-iULKPiuina5CqcmzXWlz1OjTwM
 name: drupal-site
-mail: drupal-site@mail.com
+mail: testu8418@gmail.com
 simple_address: false
 sitestyle: true
 textonly: false
