--- a/config/sync/block.block.poke_messages.yml
+++ b/config/sync/block.block.poke_messages.yml
@@ -1,4 +1,4 @@
-uuid: 8b9f8a85-127b-428e-ba6a-5964915cc600
+uuid: cb18ed20-b295-4a9e-9a65-a0d30a0731ca
 langcode: en
 status: true
 dependencies:
@@ -7,11 +7,11 @@ dependencies:
   theme:
     - poke
 _core:
-  default_config_hash: '-Ac3ISpIT0PQ-whzD7_dw0SdKi6dAbRFNWdSjOiVDqg'
+  default_config_hash: BZ5tpW7H8X4PVGRm3MImTIHd2tN0eF7zOtp4SpRYUA0
 id: poke_messages
 theme: poke
 region: highlighted
-weight: 0
+weight: -5
 provider: null
 plugin: system_messages_block
 settings:
