--- a/config/sync/block.block.poke_page_title.yml
+++ b/config/sync/block.block.poke_page_title.yml
@@ -1,15 +1,15 @@
-uuid: d3b5b836-24a7-4fab-af18-4a0d364319af
+uuid: b96d8ed5-fa41-4f33-9dcd-44f31ec1edf4
 langcode: en
 status: true
 dependencies:
   theme:
     - poke
 _core:
-  default_config_hash: fNwDdW063tk_ktzSWzZVeQS9wzvLooVO280BQ9WrsIs
+  default_config_hash: 6aOgWsNTXjqrDm98TXSAjP6qd2nCijD1xw45MrnbK-Y
 id: poke_page_title
 theme: poke
-region: header
-weight: -30
+region: content_above
+weight: -5
 provider: null
 plugin: page_title_block
 settings:
