--- a/config/sync/block.block.poke_secondary_local_tasks.yml
+++ b/config/sync/block.block.poke_secondary_local_tasks.yml
@@ -1,15 +1,15 @@
-uuid: 03631485-7783-4148-bec9-42f398deb728
+uuid: cbbf2694-5bc0-4b65-b34d-6ce5f4ebd4f8
 langcode: en
 status: true
 dependencies:
   theme:
     - poke
 _core:
-  default_config_hash: 2L0geP-ixCbCkEpW6BVF6H7vDUZN4ea07_Y9CociQm4
+  default_config_hash: ydSxdq7R66I8UMC460rOzlfzvlUL4VRbdwc6z9DWaUI
 id: poke_secondary_local_tasks
 theme: poke
-region: sidebar_first
-weight: 0
+region: highlighted
+weight: -2
 provider: null
 plugin: local_tasks_block
 settings:
