--- a/config/sync/views.view.pokemons.yml
+++ b/config/sync/views.view.pokemons.yml
@@ -190,9 +190,9 @@ display:
         type: grid
         options:
           uses_fields: false
-          columns: 4
-          automatic_width: true
-          alignment: vertical
+          columns: 3
+          automatic_width: false
+          alignment: horizontal
           row_class_custom: ''
           row_class_default: true
           col_class_custom: ''
