--- a/web/themes/custom/poke/poke.info.yml
+++ b/web/themes/custom/poke/poke.info.yml
@@ -3,6 +3,20 @@ description: Pokemon theme.
 type: theme
 core_version_requirement: ^8 || ^9
 package: Trainee custom theme.
-base theme: claro
+base theme: olivero
+regions:
+  header: Header
+  primary_menu: 'Primary menu'
+  secondary_menu: 'Secondary menu'
+  hero: 'Hero (full width)'
+  highlighted: Highlighted
+  breadcrumb: Breadcrumb
+  social: Social Bar
+  content_above: Content Above
+  content: Content
+  sidebar: 'Sidebar'
+  content_below: 'Content Below'
+  footer_top: 'Footer Top'
+  footer_bottom: 'Footer Bottom'
 libraries:
   - poke/global-styling
