--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   admin_toolbar_search: 0
   admin_toolbar_tools: 0
   advancedqueue: 0
+  advertisement: 0
   automated_cron: 0
   basic_auth: 0
   batch_test: 0
