added form validations

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         "drupal/config_filter": "^2.4",
         "drupal/config_inspector": "^2.1",
         "drupal/config_split": "^2.0@RC",
+        "drupal/content_access": "^1.0@alpha",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/fancy_file_delete": "^2.0",
         "drupal/file_delete": "^2.0",
         "drupal/image_style_warmer": "^1.1",
         "drupal/media_entity_remote_image": "^1.0@alpha",
